# remarkable-watcher

./: .gitignore  README.md  converter.py  flake.nix  pyproject.toml  watcher.py
support/: com.example.remarkable-watcher.plist  run-watcher.sh
tests/: test_watcher.py
tests/fixtures/v6_notebook/: e6811879-72fe-4dce-a3be-e77718d4f461.content  e6811879-72fe-4dce-a3be-e77718d4f461.metadata
tests/fixtures/v6_notebook/e6811879-72fe-4dce-a3be-e77718d4f461/: 1087bfcc-6a85-46d3-b47c-6752614b9df1.rm  1415f5ba-7d2a-4e43-95de-b2f822ae7ce2.rm  a1aafb75-12b9-44b5-933b-77338bc5bcb0.rm  e58f20e5-b742-4eda-98bc-ec58eebc77dc.rm
