[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "remarkable-watcher"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=3.0.0",
    "rmc>=0.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
rm-watch   = "watcher:main"
rm-convert = "converter:main"

[tool.setuptools]
py-modules = ["watcher", "converter"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
